added visualization options for hashing and selectionsort, fixed visualization bug in insertionsort

--- a/Insertionsort/InsertionsortVisualization.ipynb
+++ b/Insertionsort/InsertionsortVisualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Copyright 2021-2023 Jens Liebehenschel, Frankfurt University of Applied Sciences, FB2, Computer Science\n",
+    "### Copyright 2021-2024 Jens Liebehenschel, Frankfurt University of Applied Sciences, FB2, Computer Science\n",
     "### No liability or warranty; only for educational and non-commercial purposes\n",
     "### See some basic hints for working with Jupyter notebooks in README.md\n",
     "## Sorting an array using insertionsort and visualize the single steps"
@@ -314,9 +314,9 @@
     "    plt.text(1+OFFSET, i+OFFSET, COLORS[i][1], verticalalignment='center_baseline', horizontalalignment='left', fontsize=FONTSIZE_LEGEND)\n",
     "for i in range(2):\n",
     "    plot_interval(11, [i+OFFSET,i+OFFSET], COLORS[i+3][0])\n",
-    "    plt.text(11+OFFSET, i+OFFSET, COLORS[i+3][1], verticalalignment='center_baseline', horizontalalignment='left', fontsize=14)\n",
+    "    plt.text(11+OFFSET, i+OFFSET, COLORS[i+3][1], verticalalignment='center_baseline', horizontalalignment='left', fontsize=FONTSIZE_LEGEND)\n",
     "plt.plot([9.8,11.2], [2.25,2.75], COLORS[5][0])\n",
-    "plt.text(11+OFFSET, 2+OFFSET, COLORS[5][1], verticalalignment='center_baseline', horizontalalignment='left', fontsize=14)\n",
+    "plt.text(11+OFFSET, 2+OFFSET, COLORS[5][1], verticalalignment='center_baseline', horizontalalignment='left', fontsize=FONTSIZE_LEGEND)\n",
     "plt.show()"
    ]
   },
