Prevent potential scaling issue for 2D visualization

--- a/Bin Packing/Bin_PackingVisualization.ipynb
+++ b/Bin Packing/Bin_PackingVisualization.ipynb
@@ -652,12 +652,14 @@
     "        axs_with_bins = [ax for ax in axs_row if len(ax.get_xticks()) > 0]\n",
     "        # Get the bin in the row with the highest amount of cells\n",
     "        max_x_in_row = max(map(lambda ax: ax.get_xlim()[-1], axs_with_bins))\n",
+    "        max_y_in_row = max(map(lambda ax: ax.get_ylim()[-1], axs_with_bins))\n",
     "        # Get starting position of first bin\n",
     "        current_x = axs_with_bins[0].get_position().x0\n",
     "        for ax in axs_with_bins:\n",
     "            # This makes it so, that each bin will have the same size (and therefore same scaling on X-/Y-axes)\n",
     "            # Since the rest of the axis is invisible, it does not make much difference.\n",
     "            ax.set_xlim(right=max_x_in_row)\n",
+    "            ax.set_ylim(top=max_y_in_row)\n",
     "            # A few bins may have been artifically enlarged to a given size, if they are not all of the same size.\n",
     "            # But now there are inconsitent spaces between bins, since the area that came with the enlargement is invisible.\n",
     "            # Solve this by overlapping them, making sure that all real content is still visible.\n",
