added initial version of QuickselectVisualization.ipynb minor change in HashingVisualization.ipynb

--- a/Hashing/HashingVisualization.ipynb
+++ b/Hashing/HashingVisualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Copyright 2022-2024 Jens Liebehenschel, Frankfurt University of Applied Sciences, FB2, Computer Science\n",
+    "### Copyright 2022-2026 Jens Liebehenschel, Frankfurt University of Applied Sciences, FB2, Computer Science\n",
     "### No liability or warranty; only for educational and non-commercial purposes\n",
     "### See some basic hints for working with Jupyter notebooks in README.md\n",
     "## Storing keys in a hash table with collision resolution using open addressing with linear probing and its visualization"
@@ -43,13 +43,13 @@
     "NUM_Y_TICKS = 10\n",
     "\n",
     "# graphical output: width of bars and size of fonts - two settings are given here\n",
-    "# use for good readability of fewer sorting steps, e.g. 20-25\n",
+    "# use for good readability of fewer steps, e.g. 20-25\n",
     "#BAR_WIDTH = 20\n",
     "#FONTSIZE_LEGEND = 20\n",
     "#FONTSIZE_ELEMENTS = 24\n",
     "#FONTSIZE_AXES = 24\n",
     "#FONTSIZE_AXES_LEGEND = 20\n",
-    "# use for good readability of more sorting steps, e.g. 80-100\n",
+    "# use for good readability of more steps, e.g. 80-100\n",
     "BAR_WIDTH = 8\n",
     "FONTSIZE_LEGEND = 14\n",
     "FONTSIZE_ELEMENTS = 14\n",
